cloud/jupyterhub1/config/network.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress-jh
  namespace: jupyterhub
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress-jh
  namespace: jupyterhub
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
